[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zhon"
dynamic = ["version"]
description = "Zhon provides constants used in Chinese text processing."
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Thomas Roten" },
]
requires-python = ">=3.9"
keywords = [
    "chinese",
    "mandarin",
    "segmentation",
    "tokenization",
    "punctuation",
    "hanzi",
    "unicode",
    "radicals",
    "han",
    "cjk",
    "cedict",
    "cc-cedict",
    "traditional",
    "simplified",
    "characters",
    "pinyin",
    "zhuyin",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Documentation = "https://tsroten.github.io/zhon"
Changes = "https://tsroten.github.io/zhon/history.html"
"Issue Tracker" = "https://github.com/tsroten/zhon/issues"
"Source Code" = "https://github.com/tsroten/zhon"

[tool.hatch.version]
path = "src/zhon/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.envs.default.scripts]
test = "hatch run test:run"
format = "hatch run style:format"
lint = "hatch run style:check"
docs = "hatch run docs:html"

[tool.hatch.envs.docs]
dependencies = [
  "Sphinx",
  "releases"
]

[tool.hatch.envs.docs.scripts]
clean = "cd docs && make clean"
generate = "cd docs && make html"
view = "open docs/_build/html/index.html"
check = "cd docs && make linkcheck"
html = [
    "clean",
    "generate",
    "check",
    "view"
]

[tool.hatch.envs.test.scripts]
clean = "find . -type f -name '*.py[co]' -delete -o -type d -name __pycache__ -delete"
test = "python3 -Wdefault -m unittest -v"
run = [
    "clean",
    "test"
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.style]
detached = true
dependencies = [
    "black",
    "flake8",
    "pep8-naming",
    "flake8-blind-except",
    "flake8-builtins",
    "flake8-pep3101",
    "flake8-string-format"
]

[tool.hatch.envs.style.scripts]
check = [
    "black -q --check --diff src tests",
    "flake8 src tests"
]
format = [
    "black -q src tests"
]